add new content

--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -165,6 +165,8 @@ To discover more, head to the related [documentation](/development_suite/set-up-
 
 Iframe extensions now benefit from a unified and secure authentication framework using Console Single Sign-On (SSO). This enhancement allows iframe extensions to recognize user permissions and manage authentication and authorization seamlessly. By leveraging Console SSO in your extensions, only authorized users can access and interact with specific iframe extensions, enhancing overall security and control across Mia-Platform Console.
 
+![Extensions SSO](img/extensions-sso.png)
+
 ### Auto-generated form in Infrastructure Resource Creation 
 
 Creating new Infrastructure Resources in the Design area is now easier than ever.  
