--- a/docs/release-notes/v14.0.0.mdx
+++ b/docs/release-notes/v14.0.0.mdx
@@ -5,6 +5,18 @@ sidebar_label: v14.0.0
 image: "img/release-note-link-preview.png"
 ---
 
+export const Highlight = ({children, color}) => (
+  <span
+    style={{
+      backgroundColor: color,
+      borderRadius: '8px',
+      color: '#fff',
+      padding: '0.3rem',
+    }}>
+    {children}
+  </span>
+);
+
 _April 22nd, 2025_
 
 :::info
@@ -29,13 +41,15 @@ For more information, go to the [documentation](/development_suite/set-up-infras
 We've introduced a new Project category for greater control over infrastructure provisioning in Console. Designed for Operations teams, these new type of Projects let you manage infrastructure resources directly, aligning with Infrastructure as Code. You can now easily visualize, manage, and efficiently execute provisioning actions.
 Just create an Infrastructure Project and start provisioning infrastructure to your Developers!
 
-For more information, go to the [documentation](/) and visit [Mia-Platform Console v14 Overview](/).
+For more information, go to the [documentation](/) and visit [Mia-Platform Console v14 Overview](/release-notes/mia-platform-v14.mdx#projects-for-infrastructure-provisioning).
 
-## iframe extensions support login with Console SSO
+## Iframe extensions support login with Console SSO
 
 We've enhanced iframe extensions with unified and secure authentication using Console SSO. Your extensions can now recognize user permissions and manage authentication seamlessly, ensuring only authorized users can access them and improving overall security.
 
-For more information, go to the [documentation](/) and visit [Mia-Platform Console v14 Overview](/).
+![Extensions SSO](img/extensions-sso.png)
+
+For more information, go to the [documentation](docs/console/console-extensibility/sso.md) and visit [Mia-Platform Console v14 Overview](/release-notes/mia-platform-v14.mdx#iframe-extensions-support-login-with-console-sso).
 
 ## Composer extensions can fetch data from Console APIs
 
@@ -51,6 +65,8 @@ To boost transparency, manifests for public items in the Mia-Platform catalog ar
 Additionally, each item's manifest can be downloaded directly from its detail page within the Software Catalog.
 
 We’ve also redesigned the release life cycle, adding new stages: `Coming soon`, `Draft`, `Published`, `Maintenance`, `Deprecated`, `Archived`, and `Deleted`. This new structure makes it easier to track and manage catalog items across their entire lifecycle.
+
+![SC new release stages](img/software-catalog-release-stages.png)
 
 ## Marketplace API Deprecation
 
@@ -75,8 +91,6 @@ From now on, when creating a Project, you can read the description of the Projec
 
 Starting from now, each Project will show to the user the name of the Project Template from which the Project has been created. This information will be visible in the Settings of the Project, within the General tab.
 
-### Bug Fix
-
 ## Fast Data
 
 ### Fast Data Services
@@ -96,7 +110,8 @@ For more information check out the service [changelog](/runtime_suite/single-vie
 ### MongoDB Connection support in Data Catalog
 
 [Support for MongoDB](/data_catalog/frontend/data_catalog_connections.mdx#mongodb) as a new connection provider has been introduced in Data Catalog. Users can now define a connection string to connect directly to a MongoDB instance. When collections include a MongoDB JSON Schema validation, the agent is able to automatically detect field structures and types.  
-Retrieval of databases and collections can be managed through multiple configuration modes. Check the full list of available options in the [official documentation](/data_catalog/frontend/data_catalog_connections.mdx#mongodb-databases-settings) to configure the behavior according to your needs.
+Retrieval of databases and collections can be managed through multiple configuration modes.  
+Check the full list of available options in the [official documentation](/data_catalog/frontend/data_catalog_connections.mdx#mongodb-databases-settings) to configure the behavior according to your needs.
 
 ## Marketplace
 
