--- a/docs/release-notes/v14.0.0.mdx
+++ b/docs/release-notes/v14.0.0.mdx
@@ -41,7 +41,9 @@ For more information, go to the [documentation](/development_suite/set-up-infras
 We've introduced a new Project category for greater control over infrastructure provisioning in Console. Designed for Operations teams, these new type of Projects let you manage infrastructure resources directly, aligning with Infrastructure as Code. You can now easily visualize, manage, and efficiently execute provisioning actions.
 Just create an Infrastructure Project and start provisioning infrastructure to your Developers!
 
-For more information, go to the [documentation](/) and visit [Mia-Platform Console v14 Overview](/release-notes/mia-platform-v14.mdx#projects-for-infrastructure-provisioning).
+![Infrastructure Projects](./img/infrastructure-project-selection.png)
+
+For more information, go to the [documentation](/console/project-configuration/infrastructure-project.md) and visit [Mia-Platform Console v14 Overview](/release-notes/mia-platform-v14.mdx#projects-for-infrastructure-provisioning).
 
 ## Iframe extensions support login with Console SSO
 
