--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -159,7 +159,7 @@ Mia-Platform Console now features a redesigned environment management system, si
 The concept of branches in the Design area has been replaced, with the environment now serving as the central element for each area.   
 Users will work directly within specific environments across all Mia-Platform Console sections, establishing a consistent and intuitive experience and aligning the Design area with the logical structure of other Mia-Platform Console areas.
 
-To discover more, head to the related [documentation](/development_suite/set-up-infrastructure/env-based-management.md)
+To discover more, head to the related [documentation](/development_suite/set-up-infrastructure/env-based-management.md).
 
 ### Iframe extensions support login with Console SSO
 
@@ -182,6 +182,8 @@ Stay informed and in control with our new Audit Logs feature, designed to provid
 
 ![Audit logs table](./img/audit-logs.png)
 
+To discover more, head to the related [documentation](/development_suite/identity-and-access-management/monitor-audit-logs.md).
+
 ## Secure Cloud Ops
 
 Upholding high standards of service reliability and maintaining the comprehensive security posture required for business operations within complex, distributed platform environments is key for IT Organizations. This involves the implementation and management of Infrastructure resources, robust operational controls, cost and resources utilization monitoring, security measures, and resilience strategies.
@@ -191,6 +193,8 @@ Upholding high standards of service reliability and maintaining the comprehensiv
 Take greater control over your infrastructure provisioning with the new dedicated Project category in the Mia-Platform Console. Designed for Operations teams, these specialized Projects facilitate management of infrastructure resources within the Console, aligning with Infrastructure as Code practices. Easily visualize and manage your infrastructure state, and execute provisioning actions with improved efficiency for your infrastructure-related tasks.
 
 ![Infrastructure Projects](./img/infrastructure-project-selection.png)
+
+To discover more, head to the related [documentation](/console/project-configuration/infrastructure-project.md).
 
 ### Kubernetes Import via miactl 
 
