--- a/docs/release-notes/v14.0.0.mdx
+++ b/docs/release-notes/v14.0.0.mdx
@@ -81,9 +81,9 @@ Additionally, it is no longer possible to manage the Marketplace items from the 
 
 ### Improvements
 
-#### Export Microservices Environment Variables
+#### Download Microservices Environment Variables
 
-You can now export as `.env` file the Environment Variables of your Microservices directly on the related section within the detail of a Microservice!
+You can now download as `.env` file the Environment Variables of your Microservices directly on the related section within the detail of a Microservice!
 
 #### See Project Template's description when creating a Project
 
