--- a/docs/release-notes/v14.0.0.mdx
+++ b/docs/release-notes/v14.0.0.mdx
@@ -38,7 +38,7 @@ For more information, go to the [documentation](/development_suite/set-up-infras
 
 ## Projects for Infrastructure Provisioning
 
-We've introduced a new Project category for greater control over infrastructure provisioning in Console. Designed for Operations teams, these new type of Projects let you manage infrastructure resources directly, aligning with Infrastructure as Code. You can now easily visualize, manage, and efficiently execute provisioning actions.
+We've introduced Infrastructure Projects, a new Project type for greater control over infrastructure provisioning in Console. Designed for Operations teams, these new type of Projects let you manage infrastructure resources directly, aligning with Infrastructure as Code. You can now easily visualize, manage, and efficiently execute provisioning actions.
 Just create an Infrastructure Project and start provisioning infrastructure to your Developers!
 
 ![Infrastructure Projects](./img/infrastructure-project-selection.png)
@@ -89,9 +89,9 @@ You can now download as `.env` file the Environment Variables of your Microservi
 
 From now on, when creating a Project, you can read the description of the Project Template you are selecting.
 
-#### See Project Template used in a Project
+#### See Project Template used in an Application Project
 
-Starting from now, newly created Projects will show to the user the name of the Project Template from which the Project has been created. This information will be visible in the Settings of the Project, inside the General tab.
+Starting from now, newly created Projects of type Application will show to the user the name of the Project Template from which the Project has been created. This information will be visible in the Settings of the Project, inside the General tab.
 
 ## Fast Data
 
