--- a/docs/release-notes/v14.0.0.mdx
+++ b/docs/release-notes/v14.0.0.mdx
@@ -89,9 +89,9 @@ You can now download as `.env` file the Environment Variables of your Microservi
 
 From now on, when creating a Project, you can read the description of the Project Template you are selecting.
 
-#### See Project Template used in an Application Project
+#### See Project Template used in a Project
 
-Starting from now, newly created Projects of type Application will show to the user the name of the Project Template from which the Project has been created. This information will be visible in the Settings of the Project, inside the General tab.
+Starting from now, newly created Projects of traditional type Application will show to the user the name of the Project Template from which the Project has been created. This information will be visible in the Settings of the Project, inside the General tab.
 
 ## Fast Data
 
