--- a/docs/release-notes/v14.0.0.mdx
+++ b/docs/release-notes/v14.0.0.mdx
@@ -17,7 +17,7 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-_April 22nd, 2025_
+_April 23rd, 2025_
 
 :::info
 
@@ -117,4 +117,4 @@ Check the full list of available options in the [official documentation](/data_c
 
 ## How to update your Console
 
-For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v14.2.0-beta.0`.
+For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v14.2.0-beta.1`.
