--- a/docs/console/project-configuration/infrastructure-project.mdx
+++ b/docs/console/project-configuration/infrastructure-project.mdx
@@ -5,16 +5,22 @@ sidebar_label: Infrastructure Projects
 sidebar_order: 2
 ---
 
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+
 **Infrastructure Projects** are a dedicated Project type in Console specifically dedicated to the provisioning and management of infrastructure, following the *Infrastructure as Code* paradigm.
 
-They are designed primarily for **Operations teams**, who can use them to define, version, and deploy infrastructure resources while ensuring consistency, transparency, and control over infrastructure changes.  
+They are designed primarily for **Operations teams**, who can use them to define, version,
+and deploy infrastructure resources while ensuring consistency, transparency, and control over infrastructure changes.
 
-These Projects are distinct from traditional [Application Projects](/docs/console/project-configuration/application-project.md) as they are specifically designed to manage infrastructure resources, enabling better control, automation, and governance in the context of Infrastructure as Code.
+These Projects are distinct from traditional [Application Projects](/docs/console/project-configuration/application-project.md) as they are specifically designed to manage infrastructure resources,
+enabling better control, automation, and governance in the context of Infrastructure as Code.
 
 :::info
 Infrastructure Projects are currently a [**BETA** feature](/docs/info/version_policy.md#feature-preview-and-beta), as such they are under development as we are adding new features and improvements.
 
-At this time they only support **GitLab** repositories with a specific pipeline configuration, the support for other providers will come with the next Console releases. You can find out more in the [techical limitations](#technical-limitations) section below.
+At this time they only support **GitLab** repositories with a specific pipeline configuration, the support for other providers will come with the next Console releases.
+You can find out more in the [techical limitations](#technical-limitations) section below.
 
 If you want to share your feedback you can head to the [Community discussion post](https://github.com/mia-platform/community/discussions/612).
 :::
@@ -30,14 +36,23 @@ This option unlocks a dedicated setup flow and enables the creation of a Project
 
 Each Infrastructure Project includes a specific section for managing **infrastructure components**.
 
-You can currently create an infrastructure component only from scratch. 
+You can currently create an infrastructure component only from scratch.
 
 To create a new infrastructure component from scratch, you need to provide the following information:
 
 - **Name**: The name of the component.  
-- **Repository URL**: The URL of the Git repository where the component's code is hosted.  
+- **Repository URL**: The URL of the Git repository where the component's code is hosted. This is used to provide a reference to the user.
 - **Git Ref Name**: The Git branch, tag, or commit that the deployment pipeline will run on.  
-- **Repository Project ID**: The project ID associated with the Git repository.
+- **Repository Project ID**: The project ID associated with the Git repository. This is actually used to interact with the Git Provider.
+
+<Tabs>
+<TabItem value="GitLab-Example" label="GitLab" default>
+
+- **Repository URL**: `https://my.gitlab.host/some/repo`
+- **Repository Project ID**: `some/repo` (or the numeric ID that can be copied from the GitLab UI)
+
+</TabItem>
+</Tabs>
 
 ![Add Infrastructure Component](./img/add-infrastructure-component.png)
 
