--- a/docs/console/project-configuration/infrastructure-project.mdx
+++ b/docs/console/project-configuration/infrastructure-project.mdx
@@ -20,7 +20,7 @@ enabling better control, automation, and governance in the context of Infrastruc
 Infrastructure Projects are currently a [**BETA** feature](/docs/info/version_policy.md#feature-preview-and-beta), as such they are under development as we are adding new features and improvements.
 
 At this time they only support **GitLab** repositories with a specific pipeline configuration, the support for other providers will come with the next Console releases.
-You can find out more in the [techical limitations](#technical-limitations) section below.
+You can find out more in the [technical limitations](#technical-limitations) section below.
 
 If you want to share your feedback you can head to the [Community discussion post](https://github.com/mia-platform/community/discussions/612).
 :::
@@ -67,7 +67,7 @@ This enables control and consistency in your infrastructure.
 
 ## Runtime Visibility
 
-After the deployment of your infrastructure components, the current state of the released infrastructure can be available for monitoring directly in the Runtime area of your Infrastructure Project.
+After the deployment of your infrastructure components, runtime data retrieval can be integrated in the Console by leveraging the 
 In order to do so, you can configure the Runtime of your infrastructure projects using the Microfrontend Composer.  
 
 :::info
