--- a/versioned_docs/version-13.x.x/release-notes/v13.7.2.md
+++ b/versioned_docs/version-13.x.x/release-notes/v13.7.2.md
@@ -13,7 +13,8 @@ _April 30th, 2025_
 
 This version address the following bugs:
 
-- Envoy-based API gateway external proxy now workin correctly, before this version an external proxy created using Envoy would make requests looping back to the same host that exposes the proxy API.
+- Envoy-based API Gateway external proxy now working correctly. Prior this version an external proxy created using Envoy would make requests looping back to the same host that exposes the proxy API.
+
 
 ## How to update your Console
 
