Add teleconsultation BE

--- a/docs/release-notes/v14.0.0.mdx
+++ b/docs/release-notes/v14.0.0.mdx
@@ -115,6 +115,16 @@ For more information check out the service [changelog](/runtime_suite/single-vie
 Retrieval of databases and collections can be managed through multiple configuration modes.  
 Check the full list of available options in the [official documentation](/data_catalog/frontend/data_catalog_connections.mdx#mongodb-databases-settings) to configure the behavior according to your needs.
 
+## Marketplace
+
+### Marketplace Updates
+
+#### Teleconsultation Service Backend
+
+The new version `2.1.0` of the Teleconsultation Service Backend is available!
+
+This version adds support for [Kaleyra transcription](https://developers.kaleyra.io/reference/video-recording), which allows you to obtain a transcription of the teleconsultation session. 
+
 ## How to update your Console
 
 For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v14.2.0-beta.1`.
