added tag beta for infra projects

--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -188,7 +188,7 @@ To discover more, head to the related [documentation](/development_suite/identit
 
 Upholding high standards of service reliability and maintaining the comprehensive security posture required for business operations within complex, distributed platform environments is key for IT Organizations. This involves the implementation and management of Infrastructure resources, robust operational controls, cost and resources utilization monitoring, security measures, and resilience strategies.
 
-### Projects for Infrastructure Provisioning  
+### Projects for Infrastructure Provisioning <Highlight color="#e5c762">BETA</Highlight>
 
 Take greater control over your infrastructure provisioning with the new dedicated Project category in the Mia-Platform Console. Designed for Operations teams, these specialized Projects facilitate management of infrastructure resources within the Console, aligning with Infrastructure as Code practices. Easily visualize and manage your infrastructure state, and execute provisioning actions with improved efficiency for your infrastructure-related tasks.
 
