--- a/docs/release-notes/v14.0.0.mdx
+++ b/docs/release-notes/v14.0.0.mdx
@@ -36,7 +36,7 @@ We've redesigned environment management in Console, significantly simplifying yo
 
 For more information, go to the [documentation](/development_suite/set-up-infrastructure/env-based-management.md) and visit [Mia-Platform Console v14 Overview](/release-notes/mia-platform-v14.mdx#environment-centric-workflow-for-projects-only-for-enhanced-projects-beta).
 
-## Projects for Infrastructure Provisioning
+## Projects for Infrastructure Provisioning <Highlight color="#e5c762">BETA</Highlight>
 
 We've introduced Infrastructure Projects, a new Project type for greater control over infrastructure provisioning in Console. Designed for Operations teams, these new type of Projects let you manage infrastructure resources directly, aligning with Infrastructure as Code. You can now easily visualize, manage, and efficiently execute provisioning actions.
 Just create an Infrastructure Project and start provisioning infrastructure to your Developers!
