Mia Care Marketplace Updates for v14 release notes (#2117)
* Add teleconsultation BE

* added tag beta for infra projects

---------

Co-authored-by: Nicola Moretto <nicola.moretto@mia-care.io>
Co-authored-by: Marco Filippi <108082959+marcofilippi@users.noreply.github.com>

--- a/docs/release-notes/v14.0.0.mdx
+++ b/docs/release-notes/v14.0.0.mdx
@@ -36,7 +36,7 @@ We've redesigned environment management in Console, significantly simplifying yo
 
 For more information, go to the [documentation](/development_suite/set-up-infrastructure/env-based-management.md) and visit [Mia-Platform Console v14 Overview](/release-notes/mia-platform-v14.mdx#environment-centric-workflow-for-projects-only-for-enhanced-projects-beta).
 
-## Projects for Infrastructure Provisioning
+## Projects for Infrastructure Provisioning <Highlight color="#e5c762">BETA</Highlight>
 
 We've introduced Infrastructure Projects, a new Project type for greater control over infrastructure provisioning in Console. Designed for Operations teams, these new type of Projects let you manage infrastructure resources directly, aligning with Infrastructure as Code. You can now easily visualize, manage, and efficiently execute provisioning actions.
 Just create an Infrastructure Project and start provisioning infrastructure to your Developers!
@@ -114,6 +114,16 @@ For more information check out the service [changelog](/runtime_suite/single-vie
 [Support for MongoDB](/data_catalog/frontend/data_catalog_connections.mdx#mongodb) as a new connection provider has been introduced in Data Catalog. Users can now define a connection string to connect directly to a MongoDB instance. When collections include a MongoDB JSON Schema validation, the agent is able to automatically detect field structures and types.  
 Retrieval of databases and collections can be managed through multiple configuration modes.  
 Check the full list of available options in the [official documentation](/data_catalog/frontend/data_catalog_connections.mdx#mongodb-databases-settings) to configure the behavior according to your needs.
+
+## Marketplace
+
+### Marketplace Updates
+
+#### Teleconsultation Service Backend
+
+The new version `2.1.0` of the Teleconsultation Service Backend is available!
+
+This version adds support for [Kaleyra transcription](https://developers.kaleyra.io/reference/video-recording), which allows you to obtain a transcription of the teleconsultation session. 
 
 ## How to update your Console
 
