chore: update v14 release note

--- a/docs/release-notes/v14.0.0.mdx
+++ b/docs/release-notes/v14.0.0.mdx
@@ -138,6 +138,12 @@ Added possibility to validate the form content when performing a custom footer a
 
 ### Marketplace Updates
 
+#### Swagger Aggregator
+
+The new version `3.9.4` of the Swagger Aggregator is available!
+
+This version fixes sidebar scrolling and filter selection issues in API Portal.
+
 #### Teleconsultation Service Backend
 
 The new version `2.1.0` of the Teleconsultation Service Backend is available!
