removed preview banner

--- a/docs/release-notes/v14.0.0.mdx
+++ b/docs/release-notes/v14.0.0.mdx
@@ -17,16 +17,7 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-_April 23rd, 2025_
-
-:::info
-
-Mia-Platform Console v14.0.0 is **now in Preview** and will be generally available on May 22nd.
-
-Console SaaS users can try out v14.0.0 latest improvements in Preview! Open a Service Request to ask for the creation of a sandbox Company in case you do not have access to any Company.
-
-For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
-:::
+_May 22nd, 2025_
 
 ## Environment centric workflow for Projects (only for Enhanced Projects) <Highlight color="#e5c762">BETA</Highlight>
 
