Add Mia Care marketplace updates

--- a/docs/release-notes/v14.0.1.mdx
+++ b/docs/release-notes/v14.0.1.mdx
@@ -32,6 +32,16 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 ## Data Catalog
 
+## Marketplace
+
+### Marketplace Updates
+
+#### FHIR Adapter 1.2.0
+
+The new version `1.2.0` of the FHIR Adapter is available!
+
+This version adds support for bundle transactions, that can be triggered by a request to the new `POST /transaction/:transactionId` endpoint.
+
 ## How to update your Console
 
 For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `vX.X.X`.
