remove repo link

--- a/docs/console/tutorials/infrastructure-project/project-configuration.mdx
+++ b/docs/console/tutorials/infrastructure-project/project-configuration.mdx
@@ -397,9 +397,7 @@ apply:
 
 As already mentioned, the infrastructure resource repository is a git repository that contains the terraform code of the resource and the pipelines needed to deploy it.
 
-Here is a link to the "TFHello World" repository which contains example code useful for this how-to: [TFHello World](https://git.tools.mia-platform.eu/clients/mia-platform/platform-development/infrastructure-playground/tf-hello-world)
-
-Some key files in this repository are:
+Some key files in your repository are:
 - main.tf: the main terraform file, which contains the resource definition and variables required for deployment.
 - .gitlab-ci.yml: the GitLab pipeline configuration file, which contains the necessary pipelines to deploy the resource.
 - scripts (folder): contains utility scripts necessary for the proper functioning of the project in the console.
