--- a/docs/console/tutorials/infrastructure-project/project-configuration.mdx
+++ b/docs/console/tutorials/infrastructure-project/project-configuration.mdx
@@ -419,3 +419,6 @@ If you encounter issues during the deployment process, consider the following st
 - Check if the Git ref (branch or tag) exists and is spelled correctly.
 - Review the output of the plan for any potential conflicts or errors.
 - Confirm that the .gitlab-ci.yml includes all required jobs for the deployment process.
+
+
+/Users/michelmurabito/Code/documentation/docs/console/tutorials/infrastructure-project/project-configuration.mdx
